- Console log moved to debug.
- Events log moved to debug.
- Exceptions log moved to debug.
- Implemented Project coinbase payment.
- Deprecated PoS passive payments.
- Improved command lbinfo.
- Adjusted blockage function.
- Console log implemented.
- Deprecated GetWebSeedNodes function.
- IsAllSynced modified.
- Reimplemented auto-update option with warning.
- Commented advopt.txt file.

Version 0.3.3Aa1

- NTP servers list adjusted.
- NosoTime unit implemented.
- Time sinchronization every block.
- Old MNs system functions deleted.
- NosoCFG functions improved.
- Implemented multi-try for update feature.
- Removed old NTP system references.
- mpMiner deprecated.
- mpTime deprecated.
- mpOptions deprecated.
- Old options system completely deprecated.
- Busy slots are now keep alive for +15 seconds.
- Removed old pool controls.
- Old multi language system completely removed.
- mpLang deprecated.
- Poolmanage unit deprecated.
- Transaction history system completely removed.
- Removed IdHTTPUpdate.

Version 0.3.2Ba1

- Removed rukzuk pool address.
- Allowed pool addresses are now dynamic.
- Implemented smart system to update nosocfg.

Version 0.3.2Ad9

- Fixed sending current besthash on node synchronization.
- Default donation changed to project address.

Version 0.3.2Ad8

- Required signed besthashes.
- Not pool mined blocks are credited to NpryectdevepmentfundsGE.
- Locked addresses and valid pools moved to global variables.
- Implemented "normal" mainnet mode on nosocfg.

Version 0.3.2Ad7

- Fixed bug.

Version 0.3.2Ad6

- Address NpryectdevepmentfundsGE protocol locked.
- Ravifj pool allowed.
- Rukzuk pool allowed.
- NSLCFG implemented.

Version 0.3.2Ad5

- Filter for valid pools addresses.

Version 0.3.2Ad4

- Fixed wrong IP for known pool.
- Added hash to RPC minninginfo.

Version 0.3.2Ad3

- Mandatory upgrade to previous version.

Version 0.3.2Ad2

- Removed solo minning.

Version 0.3.2Ad1

- Corrected RPC PendingOrders.
- Added RPC GetPeers.