@@ -318,7 +318,7 @@ object Form1: TForm1
     Height = 468
     Top = 38
     Width = 400
-    ActivePage = tabOptions
+    ActivePage = TabWallet
     Align = alTop
     Anchors = [akTop, akLeft, akRight, akBottom]
     Font.CharSet = ANSI_CHARSET
@@ -327,7 +327,7 @@ object Form1: TForm1
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     ParentFont = False
-    TabIndex = 3
+    TabIndex = 0
     TabOrder = 0
     object TabWallet: TTabSheet
       Caption = 'Wallet'
@@ -338,9 +338,9 @@ object Form1: TForm1
         Height = 440
         Top = 0
         Width = 392
-        ActivePage = TabHistory
+        ActivePage = TabAddresses
         Align = alClient
-        TabIndex = 1
+        TabIndex = 0
         TabOrder = 0
         object TabAddresses: TTabSheet
           Caption = 'Addresses'
@@ -749,7 +749,6 @@ object Form1: TForm1
           Caption = 'History'
           ClientHeight = 412
           ClientWidth = 384
-          OnShow = TabHistoryShow
           object GridMyTxs: TStringGrid
             Left = 0
             Height = 190
@@ -769,7 +768,6 @@ object Form1: TForm1
             TabOrder = 0
             OnPrepareCanvas = GridMyTxsPrepareCanvas
             OnResize = GridMyTxsResize
-            OnSelection = GridMyTxsSelection
           end
           object PanelTrxDetails: TPanel
             Left = 0
