@@ -17,6 +17,8 @@ uses
 Function Parameter(LineText:String;ParamNumber:int64;de_limit:string=' '):String;
 Function IsValidIP(IpString:String):boolean;
 Function GetSupply(block:integer):int64;
+Function Restar(number:int64):int64;
+Function HashrateToShow(speed:int64):String;
 
 IMPLEMENTATION
 
@@ -29,46 +31,46 @@ var
   WhiteSpaces : int64 = 0;
   parentesis : boolean = false;
 Begin
-while contador <= Length(LineText) do
-   begin
-   ThisChar := Linetext[contador];
-   if ((thischar = '(') and (not parentesis)) then parentesis := true
-   else if ((thischar = '(') and (parentesis)) then
+  while contador <= Length(LineText) do
+    begin
+    ThisChar := Linetext[contador];
+    if ((thischar = '(') and (not parentesis)) then parentesis := true
+    else if ((thischar = '(') and (parentesis)) then
       begin
       result := '';
       exit;
       end
-   else if ((ThisChar = ')') and (parentesis)) then
+    else if ((ThisChar = ')') and (parentesis)) then
       begin
       if WhiteSpaces = ParamNumber then
-         begin
-         result := temp;
-         exit;
-         end
-      else
-         begin
-         parentesis := false;
-         temp := '';
-         end;
-      end
-   else if ((ThisChar = de_limit) and (not parentesis)) then
+        begin
+        result := temp;
+        exit;
+        end
+    else
+      begin
+      parentesis := false;
+      temp := '';
+      end;
+    end
+    else if ((ThisChar = de_limit) and (not parentesis)) then
       begin
       WhiteSpaces := WhiteSpaces +1;
       if WhiteSpaces > Paramnumber then
-         begin
-         result := temp;
-         exit;
-         end;
+        begin
+        result := temp;
+        exit;
+        end;
       end
-   else if ((ThisChar = de_limit) and (parentesis) and (WhiteSpaces = ParamNumber)) then
+    else if ((ThisChar = de_limit) and (parentesis) and (WhiteSpaces = ParamNumber)) then
       begin
       temp := temp+ ThisChar;
       end
-   else if WhiteSpaces = ParamNumber then temp := temp+ ThisChar;
-   contador := contador+1;
-   end;
-if temp = de_limit then temp := '';
-Result := Temp;
+    else if WhiteSpaces = ParamNumber then temp := temp+ ThisChar;
+    contador := contador+1;
+    end;
+  if temp = de_limit then temp := '';
+  Result := Temp;
 End;
 
 {Verify if a string is valid IPv4 address}
@@ -90,11 +92,27 @@ Begin
   if ((valor1=127) and (valor2=0)) then result := false;
 End;
 
-
+{Returns the circulating supply on the specified block}
 Function GetSupply(block:integer):int64;
 Begin
-if block < 210000 then
-  result := (block*5000000000)+1030390730000;
+  if block < 210000 then
+    result := (block*5000000000)+1030390730000;
+End;
+
+{Convert any positive integer in negative}
+Function Restar(number:int64):int64;
+Begin
+  if number > 0 then Result := number-(Number*2)
+  else Result := number;
+End;
+
+{Converts a integer in a human readeaeble format for hashrate}
+Function HashrateToShow(speed:int64):String;
+Begin
+  if speed>1000000000 then result := FormatFloat('0.00',speed/1000000000)+' Gh/s'
+  else if speed>1000000 then result := FormatFloat('0.00',speed/1000000)+' Mh/s'
+  else if speed>1000 then result := FormatFloat('0.00',speed/1000)+' Kh/s'
+  else result := speed.ToString+' h/s'
 End;
 
 END.{UNIT}
